# mgr

./: CMakeLists.txt  README.md
doc/croff/: CMakeLists.txt  hash.c
include/mgr/: bitblit.h
src/clients/: CMakeLists.txt
src/clients/portable/simple/: CMakeLists.txt  mclock.c
src/libbitblit/: CMakeLists.txt
src/libbitblit/bitmap/: bit_alloc.c  bit_create.c  bit_open.c
src/libbitblit/linuxfb-backend/: bit_initscreen.c  bit_size.c  screen.c  screen.h
src/libbitblit/x11-backend/: bit_bytescr.c  bit_destroy.c  bitmap.h  bitscreen.c  bitx11.h  blit.c  line.c  pixel.c
src/libmgr/: is_mgr_term.c
src/mgr/: CMakeLists.txt  copyright.c  defs.h  do_event.c  do_menu.c  get_menus.c  getshell.c  menu.h  mgr.c  mouse.c  mouse.h  startup.c  subs.c
